Dormir es nuestra pasión

--- a/01_Formato.tex
+++ b/01_Formato.tex
@@ -6,6 +6,7 @@
 \usepackage{graphicx}
 \usepackage{wrapfig}
 \usepackage{multicol}
+\usepackage[table]{xcolor}
 
 \makeatletter
 \renewcommand\paragraph{\@startsection{paragraph}{4}{\z@}%
