--- a/02_Portada.tex
+++ b/02_Portada.tex
@@ -6,10 +6,13 @@ Proyecto de Investigación\\
 
 \vfill
 
-{\Huge Manual de Programador \\ (Aplicación Móvil)}
+{\Huge Acta de Cierre del Proyecto}
 
 \vspace{0.5cm}
-{\Large \textsl{Milton Neftalí Hernández Jiménez}}
+{\Large \textsl{Ramón Alvarado Álvarez\\}}
+{\Large \textsl{Milton Neftalí Hernández Jiménez\\}}
+{\Large \textsl{Alexis Martín Roque Jimeno\\}}
+{\Large \textsl{Hugo Zavaleta Silvestre\\}}
 
 
 \vfill
