--- a/03_Introduccion.tex
+++ b/03_Introduccion.tex
@@ -1,3 +1,98 @@
-\section{Introducción.}
-El presente documento describe los aspectos técnicos informáticos del sistema. El manual de programador de la aplicación móvil hace referencia a la información necesaria con el fin de orientar al personal técnico encargado de las actividades de mantenimiento, revisión, solución de problemas y configuración del sistema.
-La redacción del manual técnico está orientado a personal con conocimientos en sistemas y tecnologías de la información, así como conocimientos medios o avanzados en programación orientada a objetos sobre entorno móvil.
+\section{Nombre del proyecto.}
+\textbf{“AliveEarth”}
+
+\section{Justificación o propósito.}
+El propósito de “AliveEarth” es agilizar el tiempo de análisis de 
+la calidad del suelo mediante la técnica de Cromatografía en papel.
+
+\section{Objetivo.}
+Ayudar en la mejora del productor agropecuario, ya que es importante 
+conocer las condiciones del suelo con el fin de tomar acciones que mejore 
+las características para una mayor producción.
+
+\section{Descripción.}
+El producto de este trabajo está dirigido principalmente al sector agropecuario. 
+Se espera que los resultados y recomendaciones de este sistema permita mejorar la 
+calidad de los suelos a través de la implementación de alternativas sustentables que 
+incrementarán su productividad.
+
+\subsection{Datos.}
+\begin{center}
+    \begin{tabular}{|p{5cm}|p{7cm}|}
+        \hline
+        Empresa/Organización & MayaSoft\\
+        \hline
+        Proyecto & “AliveEarth”\\
+        \hline
+        Fecha de inicio & Junio 06, 2019\\
+        \hline
+        Patrocinador principal & Ecología, Sustentabilidad e Innovación \\
+        \hline
+        Gerente de proyecto & Milton Neftalí Hernández Jiménez\\
+        \hline
+    \end{tabular}
+\end{center}
+\subsection{Patrocinador(es).}
+\begin{center}
+    \begin{tabular}{|p{5cm}|p{3cm}|p{5cm}|}
+        \hline
+        \textbf{Nombre} & \textbf{Cargo} & \textbf{Departamento/División} \\
+        \hline
+        UPCH & & Ingeniería en Desarrollo de Software \\
+        \hline
+        UPCH & & Ingeniería en Tecnología Ambiental \\
+        \hline
+    \end{tabular}
+\end{center}
+
+\section{Razón de cierre.}
+\begin{center}
+    \begin{tabular}{|p{10cm}|p{3cm}|}
+        \hline
+        Entrega  de todos los productos  de conformidad  con los requerimientos  del cliente. & \\
+        \hline
+        Entrega  parcial de productos  y  cancelación  de otros de conformidad  con los requerimientos  del cliente. & \\
+        \hline
+        Cancelación de todos los productos asociados con el proyecto. & \\
+        \hline
+    \end{tabular}
+\end{center}
+
+\section{Aceptación de los productos o entregables.}
+\begin{center}
+    A continuación  se establece cuales  entregables  de proyecto  han  sido aceptados:
+    \begin{tabular}{|p{4cm}|p{3cm}|p{6cm}|}
+        \hline
+        \rowcolor{lightgray} \textbf{Entregable} & \textbf{Aceptación(Si o No)} & \textbf{Observaciones} \\
+        \hline
+        Aplicación Móvil & & \\
+        \hline
+        Aplicación Web & & \\
+        \hline
+        AI & & \\
+        \hline
+        Validación por correo& & \\
+        \hline
+        Servidor & & \\
+        \hline
+        Manual de programador & & \\
+        \hline
+        Manual de usuario & & \\
+        \hline
+    \end{tabular}
+\end{center}
+
+\section{Aprobaciones.}
+\begin{center}
+    \begin{tabular}{|p{4cm}|p{3cm}|p{6cm}|}
+        \hline
+        & & \\
+        \hline
+        & & \\
+        \hline
+        & & \\
+        \hline
+        & & \\
+        \hline
+    \end{tabular}
+\end{center}
